# esp32-leak-net-httpd

./: CMakeLists.txt  partition_table.csv  sdkconfig
components/custom_esp_eth_phy/: CMakeLists.txt  Kconfig.projbuild  esp_eth_mac_wallbox.c  esp_eth_mac_wallbox.h  esp_eth_phy_ksz8081.c  esp_eth_phy_ksz8081.h
components/httpd/: .gitignore  CMakeLists.txt  Kconfig.projbuild  http_static.inc  httpd.c  httpd.h
components/transport/: CMakeLists.txt  Kconfig.projbuild  ethernet.c  wifi.c
main/: CMakeLists.txt  main.c
qa/: net_load.sh
